# cabot

./: .gitignore  Dockerfile  README.md
licenses/: JavaOpenAIR-license.txt  by-nc-sa-3.0.txt  by-nd-3.0.txt  by-sa-3.0.txt  epic-license.txt
src/: Makefile-bob  Makefile-cabot
src/BasicDialogueAgent/: CPS Transducer.graffle  CPSstate.lisp  StateManager.lisp  basic-conversation-states.lisp  cps-agent-states.lisp  defsys.lisp  messages.lisp
src/CollaborativeStateManager/: CollaborativeStateManager.java  Makefile
src/CollaborativeStateManager/src/extractors/: EventExtractor.java  OntologyReader.java  TermExtractor.java
src/CollaborativeStateManager/src/handlers/: IDHandler.java  InterpretSpeechActHandler.java  MessageHandler.java  QueryCSMHandler.java  TakeInitiativeHandler.java  UpdateCSMHandler.java
src/CollaborativeStateManager/src/plans/: ActionPlanner.java  GoalPlanner.java
src/CollaborativeStateManager/src/states/: ActType.java  Action.java  Goal.java  Query.java
src/CollaborativeStateManager/src/utilities/: KQMLUtilities.java
src/Conceptualizer/: Conceptualizer.java  Makefile
src/Dummy/: code.lisp
src/GroundingModule/: GroundingModule.java  Makefile  data.owl
src/GroundingModule/python/KinectProcessing/: cvmod.py  glwin.py  laceutils.py  nimod.py  (+10 more)
src/JavaWrapper/: JavaWrapper.java  Makefile  README
src/LanguageLearner/: Makefile  defsys.lisp  learner.lisp  messages.lisp  warn.lisp
src/NewIM/: reference.lisp
src/Parser/Grammar/: adverbial-grammar.lisp  clause-grammar.lisp
src/SRIWrapper/: Makefile  SRIWrapper.java
src/SpeechController/: JLevelMeter.java  Makefile  SpeechController.java  SpeechToken.java  TODO.txt  test-messages.txt
src/SpeechData/: Makefile
src/SpeechIn3/: Makefile  analyze.c  analyze.h  bcast.c  bcast.h  input.c  input.h  live.c  live.h  log.c  log.h  main.c  main.h  parse_args_file.c  playraw.sh  raw2aiff.sh  recv.c  recv.h  s3cont_live.c  send.c  send.h  speechin.sh  sphinx.c  sphinx.h  trafficlight.h  utt.c  utt.h  wordbuf.c  wordbuf.h
src/SpeechLM/: Makefile
src/SpeechLM/cabot/: cabot.dic  cabot.lm  cabot.lm.DMP  cabot.vocab
src/SpeechOut/: .cvsignore  Makefile  README.txt  SpeechOut.sh
src/SpeechOut/client/: !THIS_DIR_HAS_SYMLINKS  Makefile  audio.c  audio.h  audio_af.c  audio_af.h  audio_sun.c  audio_sun.h  main.c  recv.c  send.c  send.h  test.pl  truetalk.c  truetalk.lisp  ttc.man
src/SpeechOut/server/: !THIS_DIR_HAS_SYMLINKS  Makefile  tts.man  tts.sh
src/SpeechOutFestival/: Makefile  README.txt  input.c  input.h  main.cpp  main.h  recv.c  recv.h  send.c  send.h
src/SpeechOutMac/: .cvsignore  DebugLog.h  DebugLog.m  Makefile  MySpeechSynthesizer.h  MySpeechSynthesizer.m  Phonemic Representation of Speech.html  README.txt  TODO.txt  Writing Embedded Speech Commands.html  input.c  input.h  listvoices.c  listvoices.m  mactts.c  mactts.m  mactts2.m  main.c  main.h  pronunciation.c  pronunciation.h  recv.c  recv.h  send.c  send.h  temp.txt  truetalk.c  truetalk.h  tts.c  tts.h
src/SpeechOutMac/app/: MySpeechSynthesizer.h  MySpeechSynthesizer.m  README.txt  SpeechOutMac-Info.plist  SpeechOutMac.icns  SpeechOutMacAppDelegate.h  SpeechOutMacAppDelegate.m  SpeechOutMac_Prefix.pch  TRIPSAgent.h  TRIPSAgent.m  VoicesPopUpButton.h  VoicesPopUpButton.m  main.m
src/SpeechOutMac/dic/: Makefile
src/Sphinx3/: .cvsignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.in
src/Sphinx3/doc/: Makefile.in
src/Sphinx3/model/: Makefile.in
src/Sphinx3/model/hmm/: Makefile.in
src/Sphinx3/model/hmm/hub4_cd_continuous_8gau_1s_c_d_dd/: Makefile.in  cm_16k_40_256  cm_16k_40_512  filler.dic
src/Sphinx3/model/lm/: Makefile.in
src/Sphinx3/model/lm/an4/: .cvsignore  Makefile.in
src/Sphinx3/scripts/: .cvsignore  Makefile.in
src/Sphinx3/src/: Makefile.am  Makefile.in
src/Sphinx3/src/libs3audio/: .cvsignore  Makefile.am  Makefile.in  ad.h.in  ad_alsa.c  ad_oss.c  ad_oss_bsd.c  ad_pa.c  ad_pa_net.c  cont_ad_base.c  mulaw_base.c
src/Sphinx3/src/libs3decoder/: .cvsignore  Makefile.in  cmn_prior.c  cmn_prior.h  kb.c  kb.h  kbcore.c  kbcore.h  vector.h  vithist.c
src/Sphinx3/src/libutil/: Makefile.am  Makefile.in  ckd_alloc.c  ckd_alloc.h
src/Sphinx3/src/lm3g2dmp/: .cvsignore  CM_funcs.c  Makefile.am  Makefile.in  Notes  hash.c  list.c  lm3g2dmp.c  lm_3g.h  salloc.c
src/Sphinx3/src/programs/: .cvsignore  Makefile.am  Makefile.in  args.c  live.c  live.h  live2.c  main_live_pretend.c  parse_args_file.c  s3ptt_live.c  s3ptt_live2.c
src/Systems/bob/: .cvsignore  DRUMRules_mod.lisp  Makefile  TextTagger-bob.conf  bobRules.lisp  cps-states.lisp  dummymessages.lisp  emptyRules.lisp  events  goals  goals-par  models  params.lisp  system.lisp  test.lisp  trips-bob.sh
src/Systems/cabot/: BlockNames.tsv  Makefile  Sallerules.lisp  cabotRules.lisp  cps-states.lisp  domain-sense-preferences.lisp  dummy-CSM.lisp  dummymessages.lisp  events  goals  goals-par  models  params.lisp  system.lisp  test.lisp  trips-cabot.sh
src/TextTagger/: Makefile
src/portaudio/: .cvsignore  Makefile.in  README-gf.txt  configure  configure.in  configure.old
src/portaudio/include/: pa_asio.h  pa_linux_alsa.h  pa_mac_core.h  pa_win_ds.h  pa_win_wasapi.h  pa_win_wmme.h  portaudio.h
src/portaudio/pablio/: pablio.c  pablio.h  test_rw.c  test_rw_echo.c  test_w_saw.c  test_w_saw8.c
src/portaudio/test/: pa_devs.c  pa_fuzz.c  pa_minlat.c  paqa_devs.c  paqa_errs.c  patest1.c  patest_buffer.c  patest_callbackstop.c  patest_clip.c  patest_converters.c  patest_dither.c  patest_dsound_surround.c  patest_hang.c  patest_in_overflow.c  patest_jack_wasapi.c  patest_latency.c  patest_leftright.c  patest_longsine.c  patest_many.c  patest_maxsines.c  patest_mono.c  patest_mono_asio_channel_select.c  patest_multi_sine.c  patest_out_underflow.c  patest_pink.c  patest_prime.c  patest_read_record.c  patest_read_write_wire.c  patest_record.c  patest_ringmix.c  patest_saw.c  patest_sine.c  patest_sine8.c  patest_sine_formats.c  patest_sine_srate.c  patest_sine_time.c  patest_start_stop.c  patest_stop.c  patest_stop_playout.c  patest_sync.c  (+11 more)
(+245 files in other folders)
